--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,5 @@
-server:
-  port: 8081
 spring:
-  datasource:
-    username: root
-    password: root
-    url: jdbc:mysql://localhost:3306/mytest?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name:  com.mysql.cj.jdbc.Driver
+  devtools:
+    add-properties: true
+  profiles:
+    active: dev
